--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="title_activity_main">MainActivity</string>
+
+    <string name="str_bottom_menu_convert">Convert</string>
+    <string name="str_bottom_menu_history">History</string>
+
 </resources>
