2023-08-01 | mkkim | ResultFragment 작성

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="str_bottom_menu_history">History</string>
 
     <string name="str_start">시작하기</string>
+    <string name="str_confirm">확인</string>
     <string name="str_complete">완료</string>
 
 </resources>
